--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -1,21 +1,5 @@
 <h1>Edit existing article</h1>
 
-<%= form_for @card do |f| %>
-	<p> 
-		<%= f.label :question %><br>
-		<%= f.text_area :question %>
-	</p>
-	<p> 
-		<%= f.label :answer %><br>
-		<%= f.text_area :answer %>
-	</p>
-	<p> 
-		<%= f.label :notes %><br>
-		<%= f.text_area :notes %>
-	</p>
-	<p>
-		<%= f.submit %>
-	</p>
-<% end %>
+<%= render 'form' %>
 
 <%= link_to "Back to cards", cards_path %>
