--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -8,6 +8,7 @@
 			<td><%= card.question %></td>
 			<td><%= link_to "Edit", edit_card_path(card) %></td>
 			<td><%= link_to "Show", card_path(card)%></td>
+			<td><%= link_to "Delete", card_path(card), method: :delete, data: {confirm: "Are you sure?"} %></td>
 		</tr>
 	<% end %>
 </table>
