--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,42 +1,1 @@
-	<div class="reveal">
-		<div class="slides">
-			<section>
-				<h2>studying for life</h2>
-				<h4>Press &#8680; or swipe left to start</h4>
-			</section>
-			<section>
-				<section>
-					<h3>For answers press &#8681; or swipe down</h3>
-				</section>
-				<section>
-					<h4>Yep, just like that.</h4>
-					<p>Alright, get studying ...</p>
-					<p>&#8680;</p>
-				</section>
-			</section>
-
-			<% @cards.each do |card| %>
-				<section>
-					<h3><%= card.question %></h3>
-				</section>
-				<section>
-					<h4><%= card.question %></h4>
-					<%= card.notes %>
-				</section>
-			<% end %>
-
-		</div>
-	</div>
-
-<!-- 	<script>
-
-		Reveal.initialize({
-			history: true,
-			transition: 'linear',
-
-			dependencies: [
-				{ src: 'assets/classList.js' }				]
-		});
-
-	</script> -->
-</body>
+<h1>Home</h1>
